# PAHS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: budget.yaml  dev_batch_scenarios.yaml  external_agents.yaml  gateway.yaml  llm.yaml  models.yaml  review_policy.yaml
docs/: ARCHITECTURE.md  DEVLAB_ROADMAP.md  EXTERNAL_AGENTS_SETUP.md  PAHS_学习全集_Zachary_Zhou.md  PAHS_架构流程图.md  PAHS_深度学习教程_详细版.md  ROADMAP.md  WEEK1_SETUP.md  WEEK2_SETUP.md  WEEK3_SETUP.md  WEEK4_SETUP.md  WEEK5_SETUP.md  WEEK6_SETUP.md  _merged_for_pdf.md
rules/: AGENTS.md
rules/agents/: creator.md  external.md  orchestrator.md  searcher.md
rules/global/: budget.md  safety.md
rules/learnings/approved/: .gitkeep  prop_20260625_002652_aac4.json
rules/learnings/pending/: .gitkeep  prop_20260625_223746_233d.json  prop_20260625_224205_4380.json  prop_20260625_224906_2c35.json  prop_20260625_225545_2cf1.json  prop_20260625_225545_3e33.json  prop_20260625_230739_1554.json  prop_20260625_230739_6dd8.json  prop_20260625_230739_80b2.json  prop_20260625_230739_a851.json  prop_20260625_230739_b01f.json  prop_20260625_231251_0c84.json  (+5 more)
rules/modes/: analysis.md  code.md  deep_think.md
scripts/: md_to_pdf.py  print_pdf_chrome.sh
src/pahs/: __init__.py  cli.py  config_loader.py  env.py  paths.py
src/pahs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
standards/: user_preferences.md
standards/by_task_type/: code_task.md  research_report.md  social_post.md
tools/builtin/: .gitkeep  production_registry.json
tools/staging/: .gitkeep
(+75 files in other folders)
