[project]
name = "pahs"
version = "0.1.0"
description = "Personal Agent Harness System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "requests>=2.31.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pah = "pahs.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
